<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
    <packaging>pom</packaging>

    <parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.2.7.RELEASE</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.github</groupId>
	<artifactId>a4ad</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>a4ad</name>
	<description>ask for a deployment</description>

	<properties>
		<maven.compiler.source>8</maven.compiler.source>
		<maven.compiler.target>8</maven.compiler.target>


		<sonar.projectKey>uniqueck_a4ad</sonar.projectKey>
		<sonar.organization>uniqueck-github</sonar.organization>
		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
		<sonar.moduleKey>${project.artifactId}</sonar.moduleKey>
		<sonar.coverage.jacoco.xmlReportPaths>${project.build.directory}/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>

		<sonar.java.spotbugs.reportPaths>${project.build.directory}/spotbugsXml.xml</sonar.java.spotbugs.reportPaths>

		<spring-boot-dependencies.version>2.1.6.RELEASE</spring-boot-dependencies.version>
		<aggregate.report.dir>configuration/target/site/jacoco-aggregate/jacoco.xml</aggregate.report.dir>
	</properties>

	<modules>
		<module>adapters/persistence</module>
		<module>adapters/web</module>
		<module>application</module>
		<module>configuration</module>
		<module>common</module>
		<module>domain</module>
		<module>ports/api-in</module>
		<module>ports/api-out</module>
        <module>adapters/bpmn-flowable</module>
        <module>adapters/ssh-jcabi</module>
        <module>adapters/web-ui-thymeleaf</module>
        <module>adapters/logging</module>
    </modules>


	<dependencyManagement>
		<dependencies>

			<dependency>
				<groupId>org.projectlombok</groupId>
				<artifactId>lombok</artifactId>
				<version>1.18.10</version>
				<scope>provided</scope>
			</dependency>

			<dependency>
				<groupId>com.tngtech.archunit</groupId>
				<artifactId>archunit</artifactId>
				<version>0.11.0</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-starter-test</artifactId>
				<version>2.0.0.RELEASE</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-junit-jupiter</artifactId>
				<version>3.2.4</version>
				<scope>test</scope>
			</dependency>


		</dependencies>
	</dependencyManagement>


	<dependencies>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>5.5.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
		</dependency>
		<dependency>
			<groupId>com.tngtech.archunit</groupId>
			<artifactId>archunit</artifactId>
		</dependency>
		<dependency>
			<groupId>com.google.code.findbugs</groupId>
			<artifactId>findbugs-annotations</artifactId>
			<version>3.0.1</version>
			<scope>provided</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M3</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>3.0.0-M3</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
			</plugin>

			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.5</version>
				<executions>
					<execution>
						<id>prepare-agent</id>
						<goals><goal>prepare-agent</goal></goals>
						<phase>process-test-classes</phase>
					</execution>
					<execution>
						<id>report</id>
						<goals><goal>report</goal></goals>
						<phase>test</phase>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>com.github.spotbugs</groupId>
				<artifactId>spotbugs-maven-plugin</artifactId>
				<version>3.1.12.2</version>
				<dependencies>
					<!-- overwrite dependency on spotbugs if you want to specify the version of spotbugs -->
					<dependency>
						<groupId>com.github.spotbugs</groupId>
						<artifactId>spotbugs</artifactId>
						<version>4.0.0</version>
					</dependency>
				</dependencies>
				<executions>
					<execution>
						<id>spotbugs</id>
						<phase>package</phase>
						<goals><goal>spotbugs</goal></goals>
					</execution>
				</executions>
			</plugin>

		</plugins>
	</build>



	<profiles>
		<profile>
			<id>arc42</id>
			<properties>
				<maven.build.timestamp.format>yyyy-MM-dd</maven.build.timestamp.format>
			</properties>
			<build>
				<defaultGoal>generate-resources</defaultGoal>
				<plugins>
					<plugin>
						<groupId>org.asciidoctor</groupId>
						<artifactId>asciidoctor-maven-plugin</artifactId>
						<version>2.0.0-RC.1</version>
						<configuration>
							<sourceDirectory>${project.basedir}/src/docs</sourceDirectory>
							<sourceDocumentName>index.adoc</sourceDocumentName>
							<backend>html5</backend>
							<attributes>
								<toc>left</toc>
								<sectanchors />
								<sectlinks />
								<doc-revision-version>V${project.version}</doc-revision-version>
								<doc-revision-date>${maven.build.timestamp}</doc-revision-date>
								<version-label/>
							</attributes>
							<requires>
								<require>asciidoctor-diagram</require>
							</requires>
						</configuration>
						<executions>
							<execution>
								<id>default</id>
								<phase>generate-resources</phase>
								<goals><goal>process-asciidoc</goal></goals>
								<inherited>false</inherited>
							</execution>
						</executions>
						<dependencies>
							<dependency>
								<groupId>org.asciidoctor</groupId>
								<artifactId>asciidoctorj-diagram</artifactId>
								<version>1.5.18</version>
							</dependency>
						</dependencies>
					</plugin>
				</plugins>

			</build>
		</profile>

	</profiles>


</project>
